--- a/iPhoneTransit/MainWindow.xib
+++ b/iPhoneTransit/MainWindow.xib
@@ -8,8 +8,6 @@
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="108"/>
-			<integer value="2"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -25,7 +23,7 @@
 			</object>
 			<object class="IBUICustomObject" id="664661524"/>
 			<object class="IBUIWindow" id="380026005">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">1316</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -43,7 +41,6 @@
 				</object>
 				<object class="NSPSMatrix" key="NSFrameMatrix"/>
 				<string key="NSFrameSize">{320, 480}</string>
-				<reference key="NSSuperview"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -58,44 +55,94 @@
 					<bool key="IBUIPrompted">NO</bool>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
-				<object class="IBUIViewController" key="IBUISelectedViewController" id="1024858337">
-					<string key="IBUITitle">Closest Stops</string>
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="765670903">
-						<string key="IBUITitle">Nearby</string>
+				<object class="IBUINavigationController" key="IBUISelectedViewController" id="127930591">
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="679415719">
+						<string key="IBUITitle">Search</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">closest.png</string>
+							<string key="NSResourceName">search.png</string>
 						</object>
-						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
-					<string key="IBUINibName">ClosestView</string>
+					<object class="IBUINavigationBar" key="IBUINavigationBar" id="134292859">
+						<nil key="NSNextResponder"/>
+						<int key="NSvFlags">256</int>
+						<string key="NSFrameSize">{320, 44}</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+					</object>
+					<object class="NSMutableArray" key="IBUIViewControllers">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="IBUIViewController" id="300545996">
+							<string key="IBUITitle">Search for Stops</string>
+							<object class="IBUINavigationItem" key="IBUINavigationItem" id="577340849">
+								<string key="IBUITitle">Item</string>
+							</object>
+							<reference key="IBUIParentViewController" ref="127930591"/>
+							<string key="IBUINibName">SearchView</string>
+						</object>
+					</object>
 				</object>
 				<object class="NSMutableArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIViewController" id="848383291">
-						<string key="IBUITitle">Favorite Stops/Bus</string>
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="792187309">
+					<object class="IBUINavigationController" id="560148549">
+						<string key="IBUITitle">Favorite</string>
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="620388425">
+							<string key="IBUITitle">Favorite</string>
 							<int key="IBUISystemItemIdentifier">1</int>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
-						<string key="IBUINibName">StopsView</string>
+						<object class="IBUINavigationBar" key="IBUINavigationBar" id="111056915">
+							<nil key="NSNextResponder"/>
+							<int key="NSvFlags">256</int>
+							<string key="NSFrameSize">{320, 44}</string>
+							<bool key="IBUIOpaque">NO</bool>
+							<bool key="IBUIClipsSubviews">YES</bool>
+							<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						</object>
+						<object class="NSMutableArray" key="IBUIViewControllers">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUIViewController" id="923014012">
+								<string key="IBUITitle">Favorite Stops</string>
+								<object class="IBUINavigationItem" key="IBUINavigationItem" id="168639126">
+									<string key="IBUITitle">Item</string>
+								</object>
+								<reference key="IBUIParentViewController" ref="560148549"/>
+								<string key="IBUINibName">StopsView</string>
+							</object>
+						</object>
 					</object>
-					<reference ref="1024858337"/>
-					<object class="IBUIViewController" id="268481961">
-						<string key="IBUITitle">Search</string>
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="807309489">
-							<string key="IBUITitle">Search</string>
+					<object class="IBUINavigationController" id="248583402">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="929808876">
+							<string key="IBUITitle">Nearby</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
-								<string key="NSResourceName">search.png</string>
+								<string key="NSResourceName">closest.png</string>
 							</object>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
-						<string key="IBUINibName">SearchView</string>
+						<object class="IBUINavigationBar" key="IBUINavigationBar" id="412436623">
+							<nil key="NSNextResponder"/>
+							<int key="NSvFlags">256</int>
+							<string key="NSFrameSize">{320, 44}</string>
+							<bool key="IBUIOpaque">NO</bool>
+							<bool key="IBUIClipsSubviews">YES</bool>
+							<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						</object>
+						<object class="NSMutableArray" key="IBUIViewControllers">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUIViewController" id="292125054">
+								<string key="IBUITitle">Nearby Stops</string>
+								<object class="IBUINavigationItem" key="IBUINavigationItem" id="298607222">
+									<string key="IBUITitle">Item</string>
+								</object>
+								<reference key="IBUIParentViewController" ref="248583402"/>
+								<string key="IBUINibName">ClosestView</string>
+							</object>
+						</object>
 					</object>
+					<reference ref="127930591"/>
 					<object class="IBUIViewController" id="399854583">
 						<string key="IBUITitle">Settings</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="579069738">
@@ -104,7 +151,6 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">setting.png</string>
 							</object>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<string key="IBUINibName">SettingsView</string>
@@ -195,10 +241,10 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="795333663"/>
-							<reference ref="1024858337"/>
 							<reference ref="399854583"/>
-							<reference ref="848383291"/>
-							<reference ref="268481961"/>
+							<reference ref="560148549"/>
+							<reference ref="127930591"/>
+							<reference ref="248583402"/>
 						</object>
 						<reference key="parent" ref="957960031"/>
 						<string key="objectName">Tab Bar Controller</string>
@@ -207,34 +253,6 @@
 						<int key="objectID">107</int>
 						<reference key="object" ref="795333663"/>
 						<reference key="parent" ref="1034742383"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">108</int>
-						<reference key="object" ref="1024858337"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="765670903"/>
-						</object>
-						<reference key="parent" ref="1034742383"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">109</int>
-						<reference key="object" ref="268481961"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="807309489"/>
-						</object>
-						<reference key="parent" ref="1034742383"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">110</int>
-						<reference key="object" ref="807309489"/>
-						<reference key="parent" ref="268481961"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">111</int>
-						<reference key="object" ref="765670903"/>
-						<reference key="parent" ref="1024858337"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">-2</int>
@@ -256,23 +274,114 @@
 						<reference key="parent" ref="399854583"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">121</int>
-						<reference key="object" ref="848383291"/>
+						<int key="objectID">123</int>
+						<reference key="object" ref="659523343"/>
+						<reference key="parent" ref="380026005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">125</int>
+						<reference key="object" ref="560148549"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="792187309"/>
+							<reference ref="620388425"/>
+							<reference ref="923014012"/>
+							<reference ref="111056915"/>
 						</object>
 						<reference key="parent" ref="1034742383"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">122</int>
-						<reference key="object" ref="792187309"/>
-						<reference key="parent" ref="848383291"/>
+						<int key="objectID">126</int>
+						<reference key="object" ref="620388425"/>
+						<reference key="parent" ref="560148549"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">123</int>
-						<reference key="object" ref="659523343"/>
-						<reference key="parent" ref="380026005"/>
+						<int key="objectID">127</int>
+						<reference key="object" ref="923014012"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="168639126"/>
+						</object>
+						<reference key="parent" ref="560148549"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">128</int>
+						<reference key="object" ref="168639126"/>
+						<reference key="parent" ref="923014012"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">129</int>
+						<reference key="object" ref="111056915"/>
+						<reference key="parent" ref="560148549"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">135</int>
+						<reference key="object" ref="127930591"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="679415719"/>
+							<reference ref="300545996"/>
+							<reference ref="134292859"/>
+						</object>
+						<reference key="parent" ref="1034742383"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">136</int>
+						<reference key="object" ref="679415719"/>
+						<reference key="parent" ref="127930591"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">137</int>
+						<reference key="object" ref="300545996"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="577340849"/>
+						</object>
+						<reference key="parent" ref="127930591"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">138</int>
+						<reference key="object" ref="577340849"/>
+						<reference key="parent" ref="300545996"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">139</int>
+						<reference key="object" ref="134292859"/>
+						<reference key="parent" ref="127930591"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">130</int>
+						<reference key="object" ref="248583402"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="412436623"/>
+							<reference ref="292125054"/>
+							<reference ref="929808876"/>
+						</object>
+						<reference key="parent" ref="1034742383"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">134</int>
+						<reference key="object" ref="412436623"/>
+						<reference key="parent" ref="248583402"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">132</int>
+						<reference key="object" ref="292125054"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="298607222"/>
+						</object>
+						<reference key="parent" ref="248583402"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">133</int>
+						<reference key="object" ref="298607222"/>
+						<reference key="parent" ref="292125054"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">131</int>
+						<reference key="object" ref="929808876"/>
+						<reference key="parent" ref="248583402"/>
 					</object>
 				</object>
 			</object>
@@ -285,15 +394,11 @@
 					<string>106.IBEditorWindowLastContentRect</string>
 					<string>106.IBPluginDependency</string>
 					<string>107.IBPluginDependency</string>
-					<string>108.CustomClassName</string>
-					<string>108.IBPluginDependency</string>
-					<string>109.CustomClassName</string>
-					<string>109.IBPluginDependency</string>
-					<string>110.IBPluginDependency</string>
-					<string>111.IBPluginDependency</string>
 					<string>115.CustomClassName</string>
-					<string>121.CustomClassName</string>
 					<string>123.IBPluginDependency</string>
+					<string>127.CustomClassName</string>
+					<string>132.CustomClassName</string>
+					<string>137.CustomClassName</string>
 					<string>2.IBAttributePlaceholdersKey</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
@@ -307,15 +412,11 @@
 					<string>{{459, 366}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>ClosestViewController</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>SearchViewController</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>SettingsViewController</string>
-					<string>FavoriteViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>FavoriteViewController</string>
+					<string>ClosestViewController</string>
+					<string>SearchViewController</string>
 					<object class="NSMutableDictionary">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
@@ -351,14 +452,14 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">124</int>
+			<int key="maxID">139</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">ClosestViewController</string>
-					<string key="superclassName">StopsView</string>
+					<string key="superclassName">StopsViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/ClosestViewController.h</string>
@@ -366,15 +467,23 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">FavoriteViewController</string>
-					<string key="superclassName">StopsView</string>
+					<string key="superclassName">StopsViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/FavoriteViewController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">SearchRangeCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="939296407">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/SettingsViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">SearchViewController</string>
-					<string key="superclassName">StopsView</string>
+					<string key="superclassName">StopsViewController</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">mySearchBar</string>
 						<string key="NS.object.0">UISearchBar</string>
@@ -392,10 +501,14 @@
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>rangeChanged:</string>
-							<string>recentChanged:</string>
+							<string>rangeChangedFinial:</string>
+							<string>resultNumChanged:</string>
+							<string>resultNumChangedFinal:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 						</object>
@@ -416,20 +529,17 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UITableViewCell</string>
 							<string>UIWebView</string>
-							<string>UITableViewCell</string>
+							<string>SearchRangeCell</string>
 							<string>UISlider</string>
 							<string>UITableViewCell</string>
 							<string>UISlider</string>
 							<string>UITableView</string>
 						</object>
 					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/SettingsViewController.h</string>
-					</object>
+					<reference key="sourceIdentifier" ref="939296407"/>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">StopsView</string>
+					<string key="className">StopsViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">stopsTableView</string>
@@ -437,7 +547,7 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/StopsView.h</string>
+						<string key="minorKey">Classes/StopsViewController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
