--- a/iPhoneTransit/StopsView.xib
+++ b/iPhoneTransit/StopsView.xib
@@ -264,6 +264,18 @@
 				<int key="IBUISelectionStyle">0</int>
 				<reference key="IBUIContentView" ref="561919324"/>
 			</object>
+			<object class="IBUIViewController" id="562453252">
+				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
+			</object>
+			<object class="IBUIWebView" id="562527366">
+				<nil key="NSNextResponder"/>
+				<int key="NSvFlags">292</int>
+				<string key="NSFrameSize">{240, 128}</string>
+				<bool key="IBUIOpaque">NO</bool>
+				<bool key="IBUIClipsSubviews">YES</bool>
+				<bool key="IBUIMultipleTouchEnabled">YES</bool>
+				<bool key="IBUIScalesPageToFit">YES</bool>
+			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<object class="NSMutableArray" key="connectionRecords">
@@ -315,6 +327,22 @@
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">33</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">view</string>
+						<reference key="source" ref="562453252"/>
+						<reference key="destination" ref="562527366"/>
+					</object>
+					<int key="connectionID">36</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mapWeb</string>
+						<reference key="source" ref="562453252"/>
+						<reference key="destination" ref="562527366"/>
+					</object>
+					<int key="connectionID">37</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -424,6 +452,16 @@
 						<reference key="object" ref="386346887"/>
 						<reference key="parent" ref="430808547"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">34</int>
+						<reference key="object" ref="562453252"/>
+						<reference key="parent" ref="360949347"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">35</int>
+						<reference key="object" ref="562527366"/>
+						<reference key="parent" ref="360949347"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -445,6 +483,10 @@
 					<string>28.IBPluginDependency</string>
 					<string>3.IBEditorWindowLastContentRect</string>
 					<string>3.IBPluginDependency</string>
+					<string>34.CustomClassName</string>
+					<string>34.IBEditorWindowLastContentRect</string>
+					<string>34.IBPluginDependency</string>
+					<string>35.IBPluginDependency</string>
 					<string>7.CustomClassName</string>
 					<string>7.IBEditorWindowLastContentRect</string>
 					<string>7.IBPluginDependency</string>
@@ -468,6 +510,10 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>{{0, 587}, {320, 247}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>MapViewController</string>
+					<string>{{63, 274}, {320, 480}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>StopCell</string>
 					<string>{{66, 654}, {320, 70}}</string>
@@ -497,7 +543,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">33</int>
+			<int key="maxID">37</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -505,24 +551,24 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">ArrivalCell</string>
 					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="577241688">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="473821298">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/StopsView.h</string>
+						<string key="minorKey">Classes/StopsViewController.h</string>
 					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MapViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">mapWeb</string>
+						<string key="NS.object.0">UIWebView</string>
+					</object>
+					<reference key="sourceIdentifier" ref="473821298"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">StopCell</string>
 					<string key="superclassName">UITableViewCell</string>
-					<reference key="sourceIdentifier" ref="577241688"/>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">StopsView</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">stopsTableView</string>
-						<string key="NS.object.0">UITableView</string>
-					</object>
-					<reference key="sourceIdentifier" ref="577241688"/>
+					<reference key="sourceIdentifier" ref="473821298"/>
 				</object>
 			</object>
 		</object>
